Global_solution_vds/kubernetes/grafana/svc-grafana.yml
apiVersion: v1
kind: Service
metadata:
  annotations:
    meta.helm.sh/release-name: grafana
    meta.helm.sh/release-namespace: grafana
  creationTimestamp: "2021-10-25T19:30:10Z"
  labels:
    app.kubernetes.io/instance: grafana
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: grafana
    app.kubernetes.io/version: 8.1.5
    helm.sh/chart: grafana-6.16.10
  name: grafana
  namespace: grafana
  resourceVersion: "9727"
  selfLink: /api/v1/namespaces/grafana/services/grafana
  uid: 97b89e6e-76cd-47fa-891b-d1314b0742a7
spec:
  clusterIP: 172.20.68.204
  ports:
  - name: service
    port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app.kubernetes.io/instance: grafana
    app.kubernetes.io/name: grafana
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
