Global_solution_vds/kubernetes/grafana/ingress-grafana.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
  - hosts:
    - a86d4f48f520e4071940f29dc1bbcbf7-1294538836.us-east-1.elb.amazonaws.com
    secretName: tls-secret
  rules:
  - host: a86d4f48f520e4071940f29dc1bbcbf7-1294538836.us-east-1.elb.amazonaws.com
    http:
      paths:
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              number: 80
